--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "bootstrap": "^4.5.2",
     "fontawesome": "^5.6.3",
     "webkit": "0.0.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
