--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "website",
   "main": "index.js",
   "scripts": {
-    "build": "npm run-script build"
+    "build": "npm run build"
   },
   "author": "Bislam S.",
   "license": "ISC",
